# cuvm

./: .gitignore  CUDA-Version-Manager-Research.md  CVM-ADRs.md  CVM-Design-Document.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  install.ps1  install.sh  justfile  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/cuvm-app/: Cargo.toml
crates/cuvm-app/src/: compat_adapter.rs  doctor.rs  lib.rs  ports.rs  resolver.rs
crates/cuvm-app/src/snapshots/: cuvm_app__doctor__aggregate_tests__broken_path_dup_and_nvcc_mismatch_snapshot.snap
crates/cuvm-app/tests/: dependency_rule.rs  find_pin.rs  resolve_from_dir.rs
crates/cuvm-cli/: Cargo.toml
crates/cuvm-cli/src/: cli.rs  composition.rs  lib.rs  main.rs  reporter.rs  shims.rs  wiring.rs
crates/cuvm-cli/src/commands/: adopt.rs  alias.rs  completions.rs  cudnn.rs  current.rs  default.rs  doctor.rs  env.rs  exec.rs  hook.rs  install.rs  list.rs  mod.rs  nccl.rs  pin.rs  self_uninstall.rs  self_update.rs  shell.rs  use.rs  which.rs
crates/cuvm-cli/tests/: adopt_e2e.rs  cli_help.rs  env_cmd.rs  exec_shell_e2e.rs  hook_golden.rs  install_e2e.rs  lifecycle_e2e.rs  m1_e2e.rs  multi_version_e2e.rs  nccl_e2e.rs  self_update_e2e.rs  shim_blackbox.rs  shim_embed.rs  shim_windows.rs
crates/cuvm-cli/tests/fixtures/: run_shim_bash.sh  run_shim_zsh.sh
crates/cuvm-cli/tests/snapshots/: cli_help__help.snap  hook_golden__hook_bash.snap  hook_golden__hook_zsh.snap
crates/cuvm-core/: Cargo.toml
crates/cuvm-core/data/: cudnn_matrix.json  driver_ceiling.json
crates/cuvm-core/src/: candidate.rs  domain.rs  env_plan.rs  envplan.rs  error.rs  lib.rs  manifest.rs  process_env.rs  version.rs
crates/cuvm-core/src/compat/: engine.rs  mod.rs  tables.rs
crates/cuvm-core/tests/: version_prop.rs
crates/cuvm-download/: Cargo.toml
crates/cuvm-download/src/: download.rs  error.rs  extract.rs  http.rs  lib.rs  progress.rs
crates/cuvm-download/tests/: fetch.rs  http_get.rs  resume.rs
crates/cuvm-nvidia/: Cargo.toml
crates/cuvm-nvidia/src/: lib.rs  smi.rs
crates/cuvm-platform/: Cargo.toml
crates/cuvm-platform/src/: cudnn_link.rs  lib.rs  unix.rs  windows.rs
crates/cuvm-platform/src/unix/: activator.rs  adopt.rs  installer.rs  mod.rs
crates/cuvm-platform/src/windows/: activator.rs  installer.rs  junction.rs  mod.rs  persist.rs
crates/cuvm-platform/tests/: adopt_unix.rs  unix_activator_golden.rs  unix_install_pipeline.rs  windows_adopt.rs  windows_env_golden.rs  windows_install_pipeline.rs  windows_persist.rs
crates/cuvm-platform/tests/snapshots/: unix_activator_golden__emit_deactivate_bash.snap  unix_activator_golden__emit_env_bash.snap  unix_activator_golden__emit_env_zsh.snap  windows_env_golden__cmd_use.snap  windows_env_golden__powershell_deactivate.snap  windows_env_golden__powershell_hook_chains_existing_prompt.snap  windows_env_golden__powershell_use.snap
crates/cuvm-registry/: Cargo.toml
crates/cuvm-registry/src/: lib.rs
crates/cuvm-registry/tests/: registry_http.rs
crates/cuvm-store/: Cargo.toml
crates/cuvm-store/src/: atomic.rs  cudnn_store.rs  error.rs  eula.rs  inventory.rs  layout.rs  lib.rs  manifest_io.rs  meta_io.rs  nccl_store.rs  redist_cache.rs
crates/cuvm-store/src/snapshots/: cuvm_store__manifest_io__tests__golden_manifest_json.snap
crates/cuvm-store/tests/: inventory_e2e.rs
docs/superpowers/plans/: 2026-06-08-cuvm-foundations-m1.md
docs/superpowers/specs/: 2026-06-08-cuvm-implementation-design.md
shims/: cuvm.cmd  cuvm.ps1  cuvm.sh  cuvm.zsh
