[workspace]
resolver = "2"
members = [
    "crates/cuvm-core",
    "crates/cuvm-app",
    "crates/cuvm-platform",
    "crates/cuvm-store",
    "crates/cuvm-registry",
    "crates/cuvm-download",
    "crates/cuvm-nvidia",
    "crates/cuvm-cli",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danghoangnhan/cvm"
description = "nvm for CUDA toolkits"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

# Shared dependency versions (CHOSEN deps, spec §3.3). Later WUs add the rest.
[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.10", features = ["tls"] }
sha2 = "0.10"
tar = "0.4"
lzma-rs = "0.3"
zip = "2.2"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
insta = "1.40"
assert_cmd = "2.0"
predicates = "3.1"
mockall = "0.13"
tempfile = "3.13"
assert_fs = "1.1"
dirs = "5.0"
httpmock = "0.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
