[workspace]
resolver = "2"
members = [
    "crates/cuvm-core",
    "crates/cuvm-app",
    "crates/cuvm-platform",
    "crates/cuvm-store",
    "crates/cuvm-registry",
    "crates/cuvm-download",
    "crates/cuvm-nvidia",
    "crates/cuvm-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danghoangnhan/cuvm"
description = "A version manager for CUDA toolkits"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

# Shared dependency versions (CHOSEN deps, spec §3.3). Later WUs add the rest.
[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.10", features = ["tls"] }
sha2 = "0.10"
tar = "0.4"
lzma-rs = "0.3"
# Pure-Rust deflate only (no C-backed xz2/lzma-sys/bzip2-sys/zstd codecs), so the
# static musl build stays fully self-contained; members opt into codecs as needed.
zip = { version = "2.2", default-features = false, features = ["deflate"] }
# Pure-Rust gzip (miniz_oxide backend, no C zlib) to read our own `.tar.gz`
# release archives during `cuvm self update`; keeps the musl build static.
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
insta = "1.40"
assert_cmd = "2.0"
predicates = "3.1"
mockall = "0.13"
tempfile = "3.13"
assert_fs = "1.1"
dirs = "6.0"
httpmock = "0.7"
indicatif = "0.18"
# Windows-only (target-gated in cuvm-platform); never compiled on the gnu/linux host.
windows = "0.58"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
