[package]
name = "cuvm-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cuvm-core = { path = "../cuvm-core" }
anyhow = { workspace = true }

[dev-dependencies]
time = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
assert_fs = { workspace = true }
