[package]
name = "cuvm-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cuvm-core = { path = "../cuvm-core" }
cuvm-app = { path = "../cuvm-app" }
anyhow = { workspace = true }
