[package]
name = "cuvm-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cuvm-core = { path = "../cuvm-core" }
cuvm-app = { path = "../cuvm-app" }
anyhow = { workspace = true }
time = { workspace = true, features = ["std"] }

[dev-dependencies]
assert_fs = { workspace = true }
tempfile = { workspace = true }
predicates = { workspace = true }
