[package]
name = "cuvm-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cuvm-core = { path = "../cuvm-core" }
cuvm-app = { path = "../cuvm-app" }
cuvm-download = { path = "../cuvm-download" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
